FIX attempt for jarring scrolling effect on mobile 2

--- a/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
@@ -21,7 +21,12 @@ p {
 }
 .parallax {
   position: fixed;
-  height: 99vh;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  z-index: -1;
 }
 .plasma-cutter {
   max-width: none;
